k8s/tinify-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tinify-deployment
  namespace: tinify
  labels:
    app: tinify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinify
  template:
    metadata:
      name: tinify
      labels:
        app: tinify
    spec:
      containers:
      - name: tinify
        image: saleejkuruniyan/tinify:latest
        imagePullPolicy: Always
        command: ["/bin/sh", "-c"]
        args:
          - |
            ./manage.py migrate &&
            ./manage.py collectstatic --noinput &&
            gunicorn urlshortener.wsgi --bind 0.0.0.0:8000
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1024Mi"
            cpu: "800m"
