k8s/tinify-service.yml
kind: Service
apiVersion: v1
metadata:
  name: tinify-service
  namespace: tinify
spec:
  selector:
    app: tinify
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30001
  type: NodePort
